--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       <div class="spinner"></div>
     </div>
 
+    <!-- Sidebar Button -->
+    <button class="sidebar-button" onclick="toggleMenu()">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </button>
+  
+
     <!-- Sidebar -->
     <div id="sidebar">
       <div id="mainMenu" class="active">
