--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <!-- Sidebar Button -->
-    <button class="sidebar-button" onclick="toggleMenu()">
+    <button id="sidebar-button" onclick="toggleSidebar()">
       <div class="bar"></div>
       <div class="bar"></div>
       <div class="bar"></div>
@@ -27,7 +27,7 @@
   
 
     <!-- Sidebar -->
-    <div id="sidebar">
+    <div id="sidebar" class="hidden-sidebar">
       <div id="mainMenu" class="active">
         <h4 id="citiesHeader">Cities</h4>
 
