--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
             🌍 Add Place
           </button>
           <button class="secondary-btn" onclick="showPlaces()">
-             View Places
+              View Places
+              <button class="delete-btn" onclick="deletePlaces()">X</button>
           </button>
+
         </div>
       </div>
 
