del button 1st html

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
           <button class="secondary-btn" onclick="showPlaces()">
               View Places
           </button>
+          <button class="secondary-btn" onclick="deleteValue()">
+              Delete
+          </button>
 
         </div>
       </div>
