--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           placeholder="Location Name"
           required
         />
+        <button type="button" onclick="getCurrentLocation()">📍 Use My Location</button>
         <input
           type="number"
           step="any"
