--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
           <button class="secondary-btn" onclick="showPlaces()">
               View Places
           </button>
+          <button class="secondary-btn">
+            <select name="ideal" id="ideal" class="ideal-for" onchange="idealForFilter()">
+              <option value="None">Ideal For</option>
+              <option value="Day">Day</option>
+              <option value="Night Life">Night Life</option>
+              <option value="Tourism">Tourism</option>
+            </select>
+          </button>                    
           <button class="secondary-btn" onclick="deleteValue()">
               Delete
         </button>
