Hide maps link for utilization purposes

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
           placeholder="Longitude"
           required
         />
-        <input
+        <!-- <input
           type="text"
           id="mapLink"
           placeholder="Google Maps Link"
           required
-        />
+        /> -->
         <select name="ideal" id="ideal">
           <option value="None" selected disabled>Ideal For</option>
           <option value="Day">Day</option>
