First update loop generation

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
               <option value="Night Life">Night Life</option>
               <option value="Tourism">Tourism</option>
             </select>
-          </button>                    
+          </button>
+          <button class="secondary-btn" onclick="generateLoop()">
+              Generate a Loop
+          </button>
         </div>
       </div>
 
