Removes markers that are over a specified distance (in the case, 5km)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <option value="Tourism">Tourism</option>
             </select>
           </button>
-          <button class="secondary-btn" onclick="generateLoop()">
+          <button class="secondary-btn" onclick="getMarkersCloseBy()">
               Generate a Loop
           </button>
         </div>
