--- a/index.html
+++ b/index.html
@@ -58,6 +58,27 @@
               <option value="Tourism">Tourism</option>
             </select>
           </button>
+
+          <div class="time-price">
+            <h3>Time</h3>
+            <div class="range-container">
+                <div class="range-value" id="timeValue"></div>
+                <input type="range" id="timeRange" value="60" min="0" max="240" class="range-slider">
+                <div class="range-labels">
+                    <span>0 min</span>
+                    <span>4h+</span>
+                </div>
+            </div>
+            <h3>Price</h3>
+            <div class="range-container">
+                <div class="range-value" id="priceValue"></div>
+                <input type="range" id="priceRange" value="500" min="0" max="1000" class="range-slider">
+                <div class="range-labels">
+                    <span>$0</span>
+                    <span>$1000+</span>
+                </div>
+            </div>
+          </div>
         </div>
       </div>
 
