updates chat page

--- a/chat.html
+++ b/chat.html
@@ -1,5 +1,66 @@
-<div id="chat-section">
-<!-- Chat content loads here -->
-    <h4>test</h4>
-</div>
+<div class="chat-container" id="background">
+    <div class="profile-button">Y</div>
 
+    <div class="contacts-table">
+      <div class="contact-row">
+        <span>Profile pic</span>
+        <span>Name</span>
+        <span>Last place</span>
+        <span>Friend</span>
+        <span>Currently in</span>
+        <span>Places/Cities suggestions</span>
+      </div>
+      <div class="contact-row">
+        <span class="profile-pic">
+            <img src="/images/bob_smith.jpg" alt="Profile picture" />
+        </span>
+        <span class="name">Bob Smith</span>
+        <span class="contact-info">Berlin</span>
+        <span class="contact-info">Close friend</span>
+        <span class="contact-info">Stuggart</span>
+        <span class="contact-info">Paris</span>
+      </div>
+      <div class="contact-row">
+        <span class="profile-pic">
+            <img src="/images/cordelia_cupp.jpg" alt="Profile picture" />
+        </span>
+        <span class="name">Cordelia Cupp</span>
+        <span class="contact-info">Bahamas</span>
+        <span class="contact-info">3nd</span>
+        <span class="contact-info">Washington D.C.</span>
+        <span class="contact-info">Bahamas</span>
+      </div>
+      <div class="contact-row">
+        <span class="profile-pic">
+            <img src="/images/jk_rowling.jpg" alt="Profile picture" />
+        </span>
+        <span class="name">J.K. Rowling</span>
+        <span class="contact-info">London</span>
+        <span class="contact-info">2nd</span>
+        <span class="contact-info">London</span>
+        <span class="contact-info">London</span>
+      </div>
+      <div class="contact-row">
+        <span class="profile-pic">
+            <img src="/images/pope_leone.jpg" alt="Profile picture" />
+        </span>
+        <span class="name">Pope Leone</span>
+        <span class="contact-info">Peru</span>
+        <span class="contact-info">3nd</span>
+        <span class="contact-info">Rome</span>
+        <span class="contact-info">Rome</span>
+      </div>
+      <div class="contact-row">
+        <span class="profile-pic">
+            <img src="/images/ed_sheeran.jpg" alt="Profile picture" />
+        </span>
+        <span class="name">Ed Sheeran</span>
+        <span class="contact-info">New York</span>
+        <span class="contact-info">Close friend</span>
+        <span class="contact-info">Las Vegas</span>
+        <span class="contact-info">Galway</span>
+      </div>
+    </div>
+
+    <button class="add-button">+</button>
+  </div>
