--- a/chat.html
+++ b/chat.html
@@ -1,7 +1,5 @@
 <div class="chat-container" id="background">
-    <div class="profile-button">
-        <img src="/images/your_profile.png" alt="Profile picture" />
-    </div>
+    <div class="profile-button">Y</div>
 
     <div class="contacts-table">
       <div class="contact-row">
