Adding and deleting stops when creating a tour

--- a/go.html
+++ b/go.html
@@ -126,7 +126,9 @@
     <div id="generate-loop" class="hidden">
         <button class="back-btn" onclick="backToMenu()">⬅ Back to Main</button>
         <button class="secondary-btn" onclick="generateTour()"> Generate the Tour</button>
-        <button type="button" onclick="tapLocation()">🔻 Add Stop</button>
+        <button class="secondary-btn" onclick="chooseStartingPoint()"> Select the starting point</button>
+        <button type="button" onclick="addStop()">🔻 Add Stop</button>
+        <button type="button" onclick="deleteStops()">Delete Stops</button>
     </div>
     </div>
 
