--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       }
 
       window.AppConfig = {
-      API_URL: 'https://openstreetmap-zue0.onrender.com/places',
+      API_URL: 'https://openstreetmap-v0jt.onrender.com/places',
       };
       
-    window.onload = () => loadMode('go');
+    window.onload = () => loadMode('go');   
     </script>
     
   </body>
