Trying again to delete a value from the database - not doable. There must be some sort of problem the way it access the db or the way is deleting the id. Also the db might be static or whatever.

--- a/go.html
+++ b/go.html
@@ -27,9 +27,10 @@
         <button class="primary-btn" onclick="createTour()">
             Create a Tour
         </button>
-        <button class="primary-btn" onclick="deleteValue()">
+        <button id="deletePlaceBtn" class="primary-btn">
             ❌ Delete Place
         </button>
+
         <button class="secondary-btn" id="search-btn" onclick="searchCity()">
             <span id="search-label">🔎 Search City</span>
             <input type="text" id="city-input" placeholder="Type a city name..." />
