--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2>Login</h2>
         <input type="text" id="loginEmail" placeholder="Email" />
         <input type="password" id="loginPassword" placeholder="Password" />
-        <button onclick="submitLogin()">Login</button>
+        <button onclick="loginUser()">Login</button>
         <div class="modal-switch">
           Don't have an account yet?
           <a href="#" onclick="showRegisterPage()">Register now</a>
@@ -51,7 +51,7 @@
         <input type="email" placeholder="Email" />
         <input type="password" placeholder="Password" />
         <input type="password" placeholder="Confirm Password" />
-        <button>Register</button>
+        <button onclick="registerUser()">Register</button>
         <div class="modal-switch">
           Already have an account?
           <a href="#" onclick="showLoginPage()">Login here</a>
