--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
       <!-- REGISTER CONTENT (Hidden initially) -->
       <div class="modal-content register" id="registerContent" style="display: none;">
         <h2>Register</h2>
-        <input type="text" placeholder="Username" />
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Password" />
-        <input type="password" placeholder="Confirm Password" />
+        <input type="text" id="username" placeholder="Username" />
+        <input type="email" id="registerEmail" placeholder="Email" />
+        <input type="password" id="registerPassword" placeholder="Password" />
+        <input type="password" id="registerPassword" placeholder="Confirm Password" />
         <button onclick="registerUser()">Register</button>
         <div class="modal-switch">
           Already have an account?
