Profile Database working

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img id="profilePicture" src="default-profile.png" style="width: 100px; height: 100px; border-radius: 50%;" />
         <input type="file" id="uploadProfilePic" accept="image/*" />
 
-        <br><h3>I'm currentl in...</h3>
+        <br><h3>I'm currently in...</h3>
         <input type="text" id="currentLocation" placeholder="I'm currently in..." />
         <br><h3>The last city I've visited was</h3>
         <input type="text" id="lastCity" placeholder="The last city I've visited was" />
